# expp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  test.cpp
.github/: copilot-instructions.md
.github/agents/: expert-cpp-software-engineer.agent.md
.github/instructions/: copilot-instructions.instructions.md
.github/workflows/: release.yml
.workbuddy/memory/: ps_diag.txt
bench/: CMakeLists.txt  cli_bench.cpp
examples/: CMakeLists.txt  cli_demo.cpp  file_test.cpp  notify.cpp  slider.cpp
include/expp/app/: cli.hpp  explorer.hpp  explorer_command_dispatcher.hpp  explorer_commands.hpp  explorer_directory_controller.hpp  explorer_mutation_controller.hpp  explorer_overlay_controller.hpp  explorer_presenter.hpp  explorer_preview_controller.hpp  explorer_render_composer.hpp  explorer_services.hpp  explorer_sort.hpp  explorer_state_helpers.hpp  explorer_view.hpp  navigation_utils.hpp  notification_center.hpp  preview_model.hpp
include/expp/core/: async_runtime.hpp  config.hpp  error.hpp  filesystem.hpp  helper.hpp  task.hpp  version_control.hpp
include/expp/ui/: components.hpp  help_menu_model.hpp  key_handler.hpp  theme.hpp
src/: main.cpp
src/app/: explorer.cpp  explorer_command_dispatcher.cpp  explorer_commands.cpp  explorer_directory_controller.cpp  explorer_mutation_controller.cpp  explorer_overlay_controller.cpp  explorer_presenter.cpp  explorer_preview_controller.cpp  explorer_render_composer.cpp  explorer_services.cpp  explorer_sort.cpp  explorer_state_helpers.cpp  explorer_view.cpp  navigation_utils.cpp  notification_center.cpp
src/core/: async_runtime.cpp  config.cpp  filesystem.cpp  version_control.cpp
src/ui/: components.cpp  dialog_component.cpp  file_list_component.cpp  help_menu_component.cpp  help_menu_model.cpp  key_handler.cpp  panel_component.cpp  preview_component.cpp  status_bar_component.cpp  theme.cpp  toast_component.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/app/: test_async_behavior.cpp  test_cli.cpp  test_explorer_scrolling.cpp  test_navigation_utils.cpp  test_notification_center.cpp
tests/core/: test_async_runtime.cpp  test_config.cpp  test_error.cpp  test_filesystem.cpp  test_version_control.cpp
tests/resource/: config.toml  main.cpp  script.sh  text.txt
tests/ui/: test_help_menu.cpp  test_key_handler.cpp
